[package]
name = "vuk"
repository = "https://github.com/aleokdev/vuk-rs"
description = "Rust bindings for https://github.com/martty/vuk"
version = "0.0.1"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindgen = "0.59.2"

[build-dependencies]
bindgen = "0.59.2"
